Update on Feb27 2018

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Stylish Portfolio - Start Bootstrap Template</title>
+    <title>Ponder Capital</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -130,9 +130,8 @@ width: 55px;
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-10 mx-auto">
-            <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
-            <p class="lead mb-5">This theme features a flexible, UX friendly sidebar menu and stock photos from our friends at
-              <a href="https://unsplash.com/">Unsplash</a>!</p>
+            <h2>Ponder Capital</h2>
+            <p class="lead mb-5">Ponder Capital specializes in investment products in Digital Currencies. With a diversified portfolio and thorough due diligence on investments, we aim to bring our investors the greatest return. By utilizing quantitative hedging strategies, we reduce risks even in the most turbulent market. </p>
             <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What We Offer</a>
           </div>
         </div>
@@ -149,41 +148,40 @@ width: 55px;
         <div class="row">
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
-              <i class="icon-screen-smartphone"></i>
+              <i class="icon-graph"></i>
             </span>
             <h4>
-              <strong>Responsive</strong>
+              <strong>High Yield</strong>
             </h4>
-            <p class="text-faded mb-0">Looks great on any screen size!</p>
+            <p class="text-faded mb-0">Invest only in high yield investment products (crypto currencies)</p>
           </div>
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
               <i class="icon-pencil"></i>
             </span>
             <h4>
-              <strong>Redesigned</strong>
+              <strong>Thorough Due Diligence</strong>
             </h4>
-            <p class="text-faded mb-0">Freshly redesigned for Bootstrap 4.</p>
+            <p class="text-faded mb-0">We do not invest in any products without a thorough due diligence.</p>
           </div>
           <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
-              <i class="icon-like"></i>
+              <i class="icon-heart"></i>
             </span>
             <h4>
-              <strong>Favorited</strong>
+              <strong>Weekly Updates</strong>
             </h4>
-            <p class="text-faded mb-0">Millions of users
-              <i class="fa fa-heart"></i>
-              Start Bootstrap!</p>
+            <p class="text-faded mb-0">We provide weekly digest to our investors because we care about you.</p>
           </div>
+
           <div class="col-lg-3 col-md-6">
             <span class="service-icon rounded-circle mx-auto mb-3">
-              <i class="icon-mustache"></i>
+              <i class="icon-anchor"></i>
             </span>
             <h4>
-              <strong>Question</strong>
+              <strong>Hedging</strong>
             </h4>
-            <p class="text-faded mb-0">I mustache you a question...</p>
+            <p class="text-faded mb-0">Using quantitative hedging strategies to avoid systematic risk</p>
           </div>
         </div>
       </div>
@@ -192,10 +190,8 @@ width: 55px;
     <!-- Callout -->
     <section class="callout">
       <div class="container text-center">
-        <h2 class="mx-auto mb-5">Welcome to
-          <em>your</em>
-          next website!</h2>
-        <a class="btn btn-primary btn-xl" href="https://startbootstrap.com/template-overviews/stylish-portfolio/">Download Now!</a>
+        <h2 class="mx-auto mb-5">Insights are published for free acess.</h2>
+        <a target=_blank class="btn btn-primary btn-xl" href="https://blog.ponder.capital">Visit Now!</a>
       </div>
     </section>
 
@@ -203,8 +199,8 @@ width: 55px;
     <section class="content-section" id="portfolio">
       <div class="container">
         <div class="content-section-heading text-center">
-          <h3 class="text-secondary mb-0">Portfolio</h3>
-          <h2 class="mb-5">Recent Projects</h2>
+          <h3 class="text-secondary mb-0">Blog</h3>
+          <h2 class="mb-5">Featuring Blog Posts</h2>
         </div>
         <div class="row no-gutters">
           <div class="col-lg-6">
@@ -258,9 +254,9 @@ width: 55px;
     <!-- Call to Action -->
     <section class="content-section bg-primary text-white">
       <div class="container text-center">
-        <h2 class="mb-4">The buttons below are impossible to resist...</h2>
-        <a href="#" class="btn btn-xl btn-light mr-4">Click Me!</a>
-        <a href="#" class="btn btn-xl btn-dark">Look at Me!</a>
+        <h2 class="mb-4">Contact Us</h2>
+        <a href="https://t.me/songzhou28" target=_blank class="btn btn-xl btn-light mr-4">Connect on Telegram</a>
+        <a href="https://app.pipefy.com/public/form/Cn2PLwE9" target=_blank  class="btn btn-xl btn-dark">Signup to Know More</a>
       </div>
     </section>
 
@@ -278,18 +274,8 @@ width: 55px;
       <div class="container">
         <ul class="list-inline mb-5">
           <li class="list-inline-item">
-            <a class="social-link rounded-circle text-white mr-3" href="#">
-              <i class="icon-social-facebook"></i>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a class="social-link rounded-circle text-white mr-3" href="#">
-              <i class="icon-social-twitter"></i>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a class="social-link rounded-circle text-white" href="#">
-              <i class="icon-social-github"></i>
+            <a class="social-link rounded-circle text-white mr-3" href="https://t.me/songzhou28">
+              <i class="icon-paper-plane"></i>
             </a>
           </li>
         </ul>
