--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
           <a class="js-scroll-trigger" href="#blog">Blog</a>
         </li>
         <li class="sidebar-nav-item">
+          <a class="js-scroll-trigger" href="#feature">Featuring Posts</a>
+        </li>
+        <li class="sidebar-nav-item">
           <a class="js-scroll-trigger" href="#contact">Contact</a>
         </li>
       </ul>
@@ -188,15 +191,15 @@ width: 55px;
     </section>
 
     <!-- Callout -->
-    <section class="callout">
+    <section class="callout" id="blog">
       <div class="container text-center">
         <h2 class="mx-auto mb-5">Insights are published for free acess.</h2>
-        <a target=_blank class="btn btn-primary btn-xl" href="https://blog.ponder.capital">Visit Now!</a>
+        <a target=_blank class="btn btn-primary btn-xl" href="https://ponder.capital">Visit Now!</a>
       </div>
     </section>
 
     <!-- Portfolio -->
-    <section class="content-section" id="portfolio">
+    <section class="content-section" id="feature">
       <div class="container">
         <div class="content-section-heading text-center">
           <h3 class="text-secondary mb-0">Blog</h3>
@@ -252,7 +255,7 @@ width: 55px;
     </section>
 
     <!-- Call to Action -->
-    <section class="content-section bg-primary text-white">
+    <section class="content-section bg-primary text-white" id="contact">
       <div class="container text-center">
         <h2 class="mb-4">Contact Us</h2>
         <a href="https://t.me/songzhou28" target=_blank class="btn btn-xl btn-light mr-4">Connect on Telegram</a>
