--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ width: 55px;
         </div>
         <div class="row no-gutters">
           <div class="col-lg-6">
-            <a class="portfolio-item" href="https://ponder.capital/aboutus/" target=__blank>
+            <a class="portfolio-item" href="https://blog.ponder.capital/aboutus/" target=__blank>
               <span class="caption">
                 <span class="caption-content">
                   <p class="mb-0">About Us: An Introduction To Ponder Capital LLC</p>
@@ -217,7 +217,7 @@ width: 55px;
             </a>
           </div>
           <div class="col-lg-6">
-            <a class="portfolio-item" href="https://ponder.capital/intro-to-crypto-currency/" target=__blank>
+            <a class="portfolio-item" href="https://blog.ponder.capital/intro-to-crypto-currency/" target=__blank>
               <span class="caption">
                 <span class="caption-content">
                   <p class="mb-0">Introduction To Crypto Currencies</p>
@@ -227,7 +227,7 @@ width: 55px;
             </a>
           </div>
           <div class="col-lg-6">
-            <a class="portfolio-item" href="http://ponder.capital/intro-to-blockchain/" target=__blank>
+            <a class="portfolio-item" href="http://blog.ponder.capital/intro-to-blockchain/" target=__blank>
               <span class="caption">
                 <span class="caption-content">
                   <p class="mb-0">Introduction To Blockchain Technology</p>
@@ -237,7 +237,7 @@ width: 55px;
             </a>
           </div>
           <div class="col-lg-6">
-            <a class="portfolio-item" href="http://ponder.capital/investment-model-00/" target=__blank>
+            <a class="portfolio-item" href="http://blog.ponder.capital/investment-model-00/" target=__blank>
               <span class="caption">
                 <span class="caption-content">
                   <p class="mb-0">A brief Introduction to An Investment Model of Crypto Currencies</p>
