--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ width: 55px;
     <section class="callout" id="blog">
       <div class="container text-center">
         <h2 class="mx-auto mb-5">Insights are published for free acess.</h2>
-        <a target=_blank class="btn btn-primary btn-xl" href="https://ponder.capital">Visit Now!</a>
+        <a target=_blank class="btn btn-primary btn-xl" href="https://blog.ponder.capital">Visit Now!</a>
       </div>
     </section>
 
@@ -278,7 +278,7 @@ width: 55px;
             </a>
           </li>
         </ul>
-        <p class="text-muted small mb-0">Copyright &copy; 2018 Ponder Capital LLC. All Rights Reserved.</p>
+        <p class="text-muted small mb-0">Copyright &copy; 2018 <a href="https://ponder.capital">Ponder Capital</a> LLC. All Rights Reserved.</p>
       </div>
     </footer>
 
