--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ width: 55px;
         </h3> 
   <a style="background-color:rgba(255,255,255,0.3)!important;border:0px!important;font-size: 16px;" class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
       -->
-        <img style="max-height: 450px;" src="img/white_ponder_capital_withsubtitle.png"/><br/><br/>
+        <img style="max-height: 380px;" src="img/white_ponder_capital_withsubtitle.png"/><br/><br/>
         
         <a href="#about" id="more" class="btn btn-circle js-scroll-trigger">
             <i class="fa fa-angle-double-down animated"></i>
@@ -227,7 +227,7 @@ width: 55px;
             </a>
           </div>
           <div class="col-lg-6">
-            <a class="portfolio-item" href="http://blog.ponder.capital/intro-to-blockchain/" target=__blank>
+            <a class="portfolio-item" href="https://blog.ponder.capital/intro-to-blockchain/" target=__blank>
               <span class="caption">
                 <span class="caption-content">
                   <p class="mb-0">Introduction To Blockchain Technology</p>
@@ -237,7 +237,7 @@ width: 55px;
             </a>
           </div>
           <div class="col-lg-6">
-            <a class="portfolio-item" href="http://blog.ponder.capital/investment-model-00/" target=__blank>
+            <a class="portfolio-item" href="https://blog.ponder.capital/investment-model-00/" target=__blank>
               <span class="caption">
                 <span class="caption-content">
                   <p class="mb-0">A brief Introduction to An Investment Model of Crypto Currencies</p>
