--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ width: 55px;
       <div class="container text-center">
         <h2 class="mb-4">Contact Us</h2>
         <a href="https://t.me/songzhou28" target=_blank class="btn btn-xl btn-light mr-4">Connect on Telegram</a>
-        <a href="https://app.pipefy.com/public/form/Cn2PLwE9" target=_blank  class="btn btn-xl btn-dark">Signup to Know More</a>
+        <a href="https://app.pipefy.com/public/form/Cn2PLwE9" target=_blank  class="btn btn-xl btn-dark mr-4">Signup to Learn More</a>
       </div>
     </section>
 
