update investor pack

--- a/index.html
+++ b/index.html
@@ -254,8 +254,10 @@ width: 55px;
     <section class="content-section bg-primary text-white" id="contact">
       <div class="container text-center">
         <h2 class="mb-4">Contact Us</h2>
-        <a href="https://t.me/songzhou28" target=_blank class="btn btn-xl btn-light mr-4">Connect on Telegram</a>
+        <a href="https://t.me/songzhou28" target=_blank class="btn btn-xl btn-dark mr-4">Connect on Telegram</a>
         <a href="https://app.pipefy.com/public/form/Cn2PLwE9" target=_blank  class="btn btn-xl btn-dark mr-4">Signup to Learn More</a>
+
+        <a href="https://ponder.capital/PonderCapitalInvestorPackv1.0.pdf" target=_blank  class="btn btn-xl btn-dark mr-4">Download Investor Pack</a>
       </div>
     </section>
 
