--- a/index.html
+++ b/index.html
@@ -135,7 +135,9 @@ width: 55px;
           <div class="col-lg-10 mx-auto">
             <h2>Ponder Capital</h2>
             <p class="lead mb-5">Ponder Capital specializes in investment products in Digital Currencies. With a diversified portfolio and thorough due diligence on investments, we aim to bring our investors the greatest return. By utilizing quantitative hedging strategies, we reduce risks even in the most turbulent market. </p>
-            <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What We Offer</a>
+            <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services" style="margin-bottom: 10px;">What We Offer</a>
+            <a style="margin-bottom: 10px;" href="https://ponder.capital/PonderCapitalInvestorPackv1.0.pdf" target=_blank  class="btn btn-xl btn-dark mr-4">Download Investor Pack</a>
+
           </div>
         </div>
       </div>
@@ -165,7 +167,7 @@ width: 55px;
             <h4>
               <strong>Thorough Due Diligence</strong>
             </h4>
-            <p class="text-faded mb-0">We do not invest in any products without a thorough due diligence.</p>
+            <p class="text-faded mb-0">We only invest in products with a thorough due diligence.</p>
           </div>
           <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
@@ -184,7 +186,7 @@ width: 55px;
             <h4>
               <strong>Hedging</strong>
             </h4>
-            <p class="text-faded mb-0">Using quantitative hedging strategies to avoid systematic risk</p>
+            <p class="text-faded mb-0">We use quantitative hedging strategies to avoid systematic risk</p>
           </div>
         </div>
       </div>
@@ -220,7 +222,7 @@ width: 55px;
             <a class="portfolio-item" href="https://blog.ponder.capital/intro-to-crypto-currency/" target=__blank>
               <span class="caption">
                 <span class="caption-content">
-                  <p class="mb-0">Introduction To Crypto Currencies</p>
+                  <p class="mb-0">An Introduction To Crypto Currencies</p>
                 </span>
               </span>
               <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
@@ -230,7 +232,7 @@ width: 55px;
             <a class="portfolio-item" href="https://blog.ponder.capital/intro-to-blockchain/" target=__blank>
               <span class="caption">
                 <span class="caption-content">
-                  <p class="mb-0">Introduction To Blockchain Technology</p>
+                  <p class="mb-0">An Introduction To Blockchain Technology</p>
                 </span>
               </span>
               <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
@@ -254,10 +256,10 @@ width: 55px;
     <section class="content-section bg-primary text-white" id="contact">
       <div class="container text-center">
         <h2 class="mb-4">Contact Us</h2>
-        <a href="https://t.me/songzhou28" target=_blank class="btn btn-xl btn-dark mr-4">Connect on Telegram</a>
-        <a href="https://app.pipefy.com/public/form/Cn2PLwE9" target=_blank  class="btn btn-xl btn-dark mr-4">Signup to Learn More</a>
+        <a style="margin-bottom: 10px;"href="https://t.me/songzhou28" target=_blank class="btn btn-xl btn-dark mr-4">Connect on Telegram</a>
+        <a style="margin-bottom: 10px;"href="https://app.pipefy.com/public/form/Cn2PLwE9" target=_blank  class="btn btn-xl btn-dark mr-4">Signup to Learn More</a>
 
-        <a href="https://ponder.capital/PonderCapitalInvestorPackv1.0.pdf" target=_blank  class="btn btn-xl btn-dark mr-4">Download Investor Pack</a>
+        <a style="margin-bottom: 10px;"href="https://ponder.capital/PonderCapitalInvestorPackv1.0.pdf" target=_blank  class="btn btn-xl btn-dark mr-4">Download Investor Pack</a>
       </div>
     </section>
 
